appId: xyz.blueskyweb.app.dev
---
- launchApp:
   appId: "xyz.blueskyweb.app.dev"
   clearState: true
- waitForAnimationToEnd
- tapOn: "Enter URL manually"
- inputText: "http://localhost:8081"
- hideKeyboard
- tapOn: "Connect"
- waitForAnimationToEnd
- swipe:
   from: "Bluesky Dev"
   direction: DOWN
